// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`build > native 1`] = `
GlobsSet {
  "excludeSet": Set {
    "!**/node_modules/**",
    "!**/miniprogram_npm/**",
    "!**/project.config.json/**",
    "!**/project.private.config.json/**",
    "!**/package.json/**",
    "!postcss.config.js",
    "!tailwind.config.js",
    "!weapp-tw.config.js",
    "!dist/**/*",
    "!./dist/**/*",
  },
  "includeSet": Set {
    "**/*.wxss",
    "**/*.less",
    "**/*.sass",
    "**/*.scss",
    "**/*.wxml",
    "**/*.json",
    "**/*.js",
    "**/*.ts",
    "**/*.wxs",
    "**/*.{png,jpg,jpeg,gif,svg,webp}",
  },
}
`;

exports[`build > native-ts 1`] = `
GlobsSet {
  "excludeSet": Set {
    "!**/node_modules/**",
    "!**/miniprogram_npm/**",
    "!**/project.config.json/**",
    "!**/project.private.config.json/**",
    "!**/package.json/**",
    "!postcss.config.js",
    "!tailwind.config.js",
    "!weapp-tw.config.js",
    "!dist/**/*",
    "!./dist/**/*",
  },
  "includeSet": Set {
    "miniprogram/**/*.wxss",
    "miniprogram/**/*.less",
    "miniprogram/**/*.sass",
    "miniprogram/**/*.scss",
    "miniprogram/**/*.wxml",
    "miniprogram/**/*.json",
    "miniprogram/**/*.js",
    "miniprogram/**/*.ts",
    "miniprogram/**/*.wxs",
    "miniprogram/**/*.{png,jpg,jpeg,gif,svg,webp}",
  },
}
`;
